fixed content tiles content overlap in ie10

--- a/grav/user/themes/haywire/sass/partials/_contentblock.sass
+++ b/grav/user/themes/haywire/sass/partials/_contentblock.sass
@@ -17,7 +17,7 @@
             @extend .is-gold-light
         p
             @extend .type__content-tile--content
-            margin: 1em 0 .5em
+            margin: 2em 0
             padding: 0 3em
         .button
             margin: 1.5em 0 0 0
@@ -26,6 +26,7 @@
         h2, h3, p
             @extend .has-text-centered
             flex-basis: 50px
+            width: 100%
         &.is-bg-primary
             h2
                 @extend .is-blue-tiffany
@@ -52,7 +53,7 @@
                 color: $white
 
     .content-tile
-        padding: 8em 0
+        min-height: 504px
     h2
         @extend .type__content-bottom-tile--primary-heading
         @extend .is-uppercase
